# Dtos/BookDto.cs
@@ -1,0 +1,6 @@
+﻿namespace Flights7.Dtos
+{
+    public record BookDto(Guid FlightId,
+        string PassengerEmail,
+        byte NumberOfSeats);
+}
